feat: add blogs page with routing, latest blogs component, and update navigation

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -22,5 +22,8 @@
 >
 </members-list>
 
+<!-- Latest Blogs -->
+<latest-blogs></latest-blogs>
+
 <!-- Contact & Location -->
 <contact-section></contact-section>
