--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -1,6 +1,6 @@
 <div class="h-8 bg-primary">
   <div
-    class="container mx-auto flex items-center justify-between h-full px-4 md:px-0"
+    class="container mx-auto flex items-center justify-between h-full px-4"
   >
     <div class="flex items-center">
       <span class="text-white text-xs">
@@ -50,7 +50,7 @@
 
 <div class="h-20 shadow-lg border-b border-gray-200 bg-white relative">
   <div
-    class="container mx-auto flex items-center justify-between h-full px-4 md:px-0"
+    class="container mx-auto flex items-center justify-between h-full px-4"
   >
     <a routerLink="/" class="">
       <img src="/images/logo.png" class="h-16" />
