--- a/src/app/pages/portal/portal.html
+++ b/src/app/pages/portal/portal.html
@@ -87,6 +87,41 @@
           </li>
           }
         </ul>
+
+        <!-- Logout Button -->
+        <div class="p-4 border-t border-gray-200">
+          <button
+            (click)="onLogout()"
+            class="flex items-center w-full p-4 lg:px-6 text-red-600 hover:text-red-700 transition-all duration-300 relative bg-transparent border-none cursor-pointer hover:bg-red-50 lg:rounded-none rounded-lg group"
+            [ngClass]="{ 'lg:justify-center lg:px-3': collapsed }"
+            type="button"
+            aria-label="Sign out of your account"
+          >
+            <div
+              class="w-6 h-6 flex items-center justify-center mr-4 transition-all duration-300 flex-shrink-0 relative"
+              [ngClass]="{ 'lg:mr-0': collapsed }"
+            >
+              <i class="fa-solid fa-right-from-bracket text-lg"></i>
+              <!-- Tooltip for collapsed state on desktop -->
+              <span
+                class="hidden lg:block absolute left-full ml-3 top-1/2 -translate-y-1/2 px-3 py-2 bg-gray-900 text-white rounded-md text-sm whitespace-nowrap opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-50 pointer-events-none"
+                [class.lg:opacity-0]="!collapsed"
+                [class.lg:invisible]="!collapsed"
+              >
+                Sign Out
+                <span
+                  class="absolute right-full top-1/2 -translate-y-1/2 border-4 border-transparent border-r-gray-900"
+                ></span>
+              </span>
+            </div>
+            <span
+              class="text-sm font-medium transition-all duration-300 flex-1 text-left"
+              [ngClass]="{ 'lg:hidden': collapsed }"
+            >
+              Sign Out
+            </span>
+          </button>
+        </div>
       </nav>
     </aside>
 
