--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,7 +2,7 @@
 <div class="py-4">
   <div class="container mx-auto px-4">
     <banner-carousel
-      [banners]="banners.value() || []"
+      [banners]="banners() || []"
       [autoPlay]="true"
       [autoPlayDelay]="5000"
       [showControls]="true"
