--- a/src/app/shared/components/latest-blogs/latest-blogs.html
+++ b/src/app/shared/components/latest-blogs/latest-blogs.html
@@ -8,9 +8,9 @@
         Discover insights and stories from our alumni community
       </p>
     </div>
-    @if (blogs.value() && blogs.value().length > 0) {
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
-      @for (blog of blogs.value(); track blog.id; let i = $index) {
+    @if (blogs() && blogs().length > 0) {
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+      @for (blog of blogs(); track blog.id; let i = $index) {
       <article
         class="bg-white rounded-2xl overflow-hidden shadow-md hover:shadow-xl hover:-translate-y-1 transition-all duration-300 ease-in-out"
         [class.lg:col-span-2]="i === 0"
